# mqtt-consumer

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: gate.yml
consumer/: __main__.py  answers.py  cli.py  main.py  questions.py  settings.py  stats.py  utils.py
migrations/: env.py  script.py.mako
migrations/versions/: f3e8d884e7fb_add_table_answers.py
mosquitto/config/: mosquitto.conf
rustmeet/rustmeet_2025/: biegaj.py  generate-files.py  question-payloads.txt  questions.yml  quiz.html  quiz.md
scripts/: publish-samples.py  publish_samples.py  samples-1.txt  samples-2.txt  simulation.txt  start.bash
tests/: conftest.py  test-samples.txt  test_answers.py
